--- a/report.html
+++ b/report.html
@@ -1625,22 +1625,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,12618],[],[[1,0,0,[],[1,332,12285],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,36133],[],[[1,0,0,[],[0,309,35820,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Verify Invalid Credential Tests","*D:\\B-Mine\\Company\\Company\\Harman2\\OpenEMRApplication\\LoginSuite\\verify_invalid_credential_tests.robot","*LoginSuite/verify_invalid_credential_tests.robot","*<p>This suite will handle all the test case related to the invalid credentails - OEM - 102\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Verify Invalid Credential Tests","*D:\\B-Mine\\Company\\Company\\Harman2\\OpenEMRApplication\\LoginSuite\\verify_invalid_credential_tests.robot","*LoginSuite/verify_invalid_credential_tests.robot","*<p>This suite will handle all the test case related to the invalid credentails - OEM - 102\x3c/p>","*Element with locator 'id=authUser' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Verify Invalid Credential Tests","name":"Verify Invalid Credential Tests","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:36","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:36","fail":1,"id":"s1","label":"Verify Invalid Credential Tests","name":"Verify Invalid Credential Tests","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1625815102017;
+window.output["baseMillis"] = 1625818441217;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12645;
+window.output["generated"] = 36166;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
