--- a/report.html
+++ b/report.html
@@ -1625,22 +1625,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,36133],[],[[1,0,0,[],[0,309,35820,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,57553],[],[[5,0,0,[],[0,303,57245,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Verify Invalid Credential Tests","*D:\\B-Mine\\Company\\Company\\Harman2\\OpenEMRApplication\\LoginSuite\\verify_invalid_credential_tests.robot","*LoginSuite/verify_invalid_credential_tests.robot","*<p>This suite will handle all the test case related to the invalid credentails - OEM - 102\x3c/p>","*Element with locator 'id=authUser' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*D:\\B-Mine\\Company\\Company\\Harman2\\OpenEMRApplication\\LoginSuite\\tests.robot","*LoginSuite/tests.robot","*<p>This suite will handle all the test case related to the invalid credentails - OEM - 102\x3c/p>","*Login","*Element with locator '//div[contains(@class,'clip__filter is_stuck')]' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:36","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:36","fail":1,"id":"s1","label":"Verify Invalid Credential Tests","name":"Verify Invalid Credential Tests","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:57","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:58","fail":1,"id":"s1","label":"Tests","name":"Tests","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1625818441217;
+window.output["baseMillis"] = 1625819409067;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 36166;
+window.output["generated"] = 57586;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
