day5-test template

--- a/report.html
+++ b/report.html
@@ -1625,22 +1625,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,57553],[],[[5,0,0,[],[0,303,57245,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,18510],[],[[5,0,0,[],[1,321,8555],[]],[6,0,0,[],[1,8877,9631],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*D:\\B-Mine\\Company\\Company\\Harman2\\OpenEMRApplication\\LoginSuite\\tests.robot","*LoginSuite/tests.robot","*<p>This suite will handle all the test case related to the invalid credentails - OEM - 102\x3c/p>","*Login","*Element with locator '//div[contains(@class,'clip__filter is_stuck')]' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Verify Invalid Credential Tests","*D:\\B-Mine\\Company\\Company\\Harman2\\OpenEMRApplication\\LoginSuite\\verify_invalid_credential_tests.robot","*LoginSuite/verify_invalid_credential_tests.robot","*<p>This suite will handle all the test case related to the invalid credentails - OEM - 102\x3c/p>","*TC1","*TC2"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:57","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:58","fail":1,"id":"s1","label":"Tests","name":"Tests","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:18","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:19","fail":0,"id":"s1","label":"Verify Invalid Credential Tests","name":"Verify Invalid Credential Tests","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1625819409067;
+window.output["baseMillis"] = 1626063639669;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 57586;
+window.output["generated"] = 18533;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
