--- a/report.html
+++ b/report.html
@@ -1625,22 +1625,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,24783],[],[[5,0,0,[],[1,1515,11502],[]],[6,0,0,[],[1,13018,11761],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,29062],[],[[4,0,0,[],[1,28730,328],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Verify Invalid Credential Tests","*D:\\B-Mine\\Company\\Company\\Harman2\\OpenEMRApplication\\LoginSuite\\verify_invalid_credential_tests.robot","*LoginSuite/verify_invalid_credential_tests.robot","*<p>This suite will handle all the test case related to the invalid credentails - OEM - 102\x3c/p>","*TC1_peter_peter123","*TC1_John_john123"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Db Tests","*D:\\B-Mine\\Company\\Company\\Harman2\\OpenEMRApplication\\DBSuite\\db_tests.robot","*DBSuite/db_tests.robot","*TC3"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:23","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:25","fail":0,"id":"s1","label":"Verify Invalid Credential Tests","name":"Verify Invalid Credential Tests","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:29","fail":0,"id":"s1","label":"Db Tests","name":"Db Tests","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1626068784888;
+window.output["baseMillis"] = 1626076230979;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 24843;
+window.output["generated"] = 29080;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
