--- a/report.html
+++ b/report.html
@@ -1625,22 +1625,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,29541],[],[[5,0,0,[],[0,9706,13967,6],[]],[7,0,0,[],[0,23675,5864,8],[]]],[],[2,0,2,0]];
+window.output["suite"] = [1,0,0,0,[],[1,0,74],[[2,3,4,0,[],[1,31,19],[],[[5,0,0,[6,7,8],[1,34,2],[]],[9,0,0,[6,7],[1,37,2],[]],[10,0,0,[6,7,11],[1,40,8],[]]],[],[3,3,0,0]],[12,13,14,0,[],[1,51,21],[],[[15,0,0,[6,16],[1,61,4],[]],[17,0,0,[6,16],[1,66,1],[]],[18,0,0,[6,16],[1,69,2],[]]],[],[3,3,0,0]]],[],[],[6,6,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Verify Invalid Credential Tests","*D:\\B-Mine\\Company\\Company\\Harman2\\OpenEMRApplication\\LoginSuite\\verify_invalid_credential_tests.robot","*LoginSuite/verify_invalid_credential_tests.robot","*<p>This suite will handle all the test case related to the invalid credentails - OEM - 102\x3c/p>","*TC1_Blank username__peter123_","*Element with locator 'id=authUser' not found.\n\nAlso keyword teardown failed:\nNoSuchWindowException: Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=91.0.4472.124)\n","*TC1_Invalid crden_John_john123_","eNrNjrEOwiAYhHee4kZdGts0MZI4ODjapYMzwk9LWvkNULFvLxofwvGS7767jvtFj1fnDefzS9MjOfYSF4pRDSThGbEAyF9CIqkwUPpFqDmQMiv0zJGMsIHvWPzkOXtQCBwkMt3wdJSLKcHy4o0ANn3xlyE4b1lCj6VIx0Nd7aq23TdV3bRbIcRpjoyJ1szBIJEK5iO2ys1kpOj+9/oblnJ2zA=="]);
+window.output["strings"] = window.output["strings"].concat(["*","*Rb1 Tests &amp; Rb2 Tests","*Rb1 Tests","*D:\\B-Mine\\Company\\Company\\Harman2\\OpenEMRApplication\\DemoSuite\\rb1_tests.robot","*DemoSuite/rb1_tests.robot","*TC1","*alltests","*dtests","*tc1","*TC2","*TC3","*tc3","*Rb2 Tests","*D:\\B-Mine\\Company\\Company\\Harman2\\OpenEMRApplication\\DemoSuite\\rb2_tests.robot","*DemoSuite/rb2_tests.robot","*TC21","*dtests2","*TC22","*TC23"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:20","fail":2,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:30","fail":2,"id":"s1","label":"Verify Invalid Credential Tests","name":"Verify Invalid Credential Tests","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":6,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"alltests","pass":6,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"dtests","pass":3,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"dtests2","pass":3,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"tc1","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"tc3","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Rb1 Tests &amp; Rb2 Tests","name":"Rb1 Tests &amp; Rb2 Tests","pass":6,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"Rb1 Tests &amp; Rb2 Tests.Rb1 Tests","name":"Rb1 Tests","pass":3,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s2","label":"Rb1 Tests &amp; Rb2 Tests.Rb2 Tests","name":"Rb2 Tests","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1626080721557;
+window.output["baseMillis"] = 1626168632613;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 29779;
+window.output["generated"] = 93;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
